--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,11 +10,12 @@ unreleased
  - fixed video enrichments in the production environment
  - improved data handling for byline, sources, title/descrption and image_url
  - implemented HTML snippet enrichment with parsing
- - finalise sidebar recommendations panel and mobile-behaviour / client-side JS
- - fix ordering of recommended article teaser slots on article page
+ - finalised sidebar recommendations panel and mobile-behaviour / client-side JS
+ - fixed ordering of recommended article teaser slots on article page
  - improved article rollovers, interactions and other layout / styling tweaks
  - improved teaser layouts and fallbacks
- - add social sharing button popups instead of new window on click
+ - added social sharing button popups instead of new window on click
+ - added download file type and filesize to document enrichment
 
 
 2015/07/14 0.0.0
