--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - added __fetchurl__ endpoint to nginx to be able to fetch the azmedien
+   footer in local dev environment
+
  - improved image handling over all with 16x9 main asset cropping and letterbox option plus loading failed fallback
  - improved image gallery styling, interactions and image sizing / mobile sizing
  - fixed video enrichments in the production environment
@@ -24,6 +27,7 @@ unreleased
  - improved responsive behaviour overall and much DRYer Scss
  - allowed gallery and video assets as the main asset
  - implemented related videos panel
+   DEPLOY: add node view to staging in CMS
  - introduced tests for routing
  - improved routing for components
  - test runners now actually return an error code greate than 0 if a test failed
@@ -33,7 +37,6 @@ unreleased
  - introduced logger 'winston'
  - disabled 'x-powered-by'
  - removed boot/explorer.js
-   DEPLOY: add node view to staging in CMS
 
 
 2015/07/14 0.0.0
