DRY adding of env vars

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,15 @@
 Changes for az-nwch-js
 ======================
 
+unreleased (24.07.15)
+==========
+
+- use .env fars for Kaltura params
+  DEPLOY: need to add Kaltura data to env files
+- now using two .env files - .env and .env.dev
+  DEPLOY: add both files
+
+
 unreleased
 ==========
 
