--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,12 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+2015/07/29 0.0.3
+================
+
   - moved Nunjucks include folder from `/app/node_modules/components/includes` to `/app/includes`
+
+  - added route for dossier-header
 
 2015/07/28 0.0.2
 ================
