--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,13 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+2015/07/31 0.0.7
+================
+
+ - fixed curated recomendations
+
+ - fixed footer
+
 2015/07/31 0.0.6
 ================
 
