--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,9 @@ unreleased
   - added `SESSION_COOKIE` and `SESSION_SECRET` to .env
     DEPLOY: set these variables
   - disabled global error handler to be able to see errors
+  - adds grid framework for use on the home, dossier and ressort pages
+  - begins ressort, subressort and dossier pages in styleguide
+
 
 2015/08/03 0.0.8
 ================
