--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,14 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - added `qs` as dependency to convert querystring <--> object
+  - added `express` as dependency (replaces loopback)
+    DEPLOY: npm install
+  - added asynchronous api connector
+  - uses async api connector for users, articles, topics, dossiers
+  - removed loopback & loopback-* modules
+  - removed `winston` as logger
+
 2015/08/04 0.0.9
 ================
 
