patch `cookie-session` to work nicely with python cookies

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,14 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - moved `cookie-session` to `modules` and apply some changes:
+    if a cookie value starts and ends with double quotes, the quotes are
+    stripped; this is necessary because python adds these double quotes
+    automatically under certain circumstances
+  - use patched `cookie-session` package (see above)
+  - updated SESSION_SECRET for local development in `.env`
+  - updated app.listen to show the url the server is listening
+
 2015/08/04 0.0.11
 =================
 
