--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - render ressort-header from subressort configuration
+
 2015/08/04 0.0.11
 =================
 
