localdev uses aaz as the default skin name to be able to use it with ngrok

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - localdev uses aaz as the default skin name to be able to use it with ngrok
+
 2015/08/07 0.0.13
 =================
 
