--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - adds header and navigations for all sites
+
 2015/08/10 0.0.14
 =================
 
