--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@ Changes for az-nwch-js
 unreleased
 ==========
 
-  - adds header and navigations for all sites
+  - adds header and navigation for all sites using header-nav component
+  - creates primary-nav and header-logo components
+  - adds /config folder for easy updating of site-specifics via json
+  - adds dynamic logo to footer
 
 2015/08/10 0.0.14
 =================
