--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - improved icon and mobile behavior of nav
+
 2015/08/10 0.0.15
 =================
 
