--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,16 +5,18 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+  - fix unclickable body on mobile devices
+  - rename all mediaqueries so that they make sense
+  - use ems for mediaqueries to make the layout zoomable
+  - adjust advertising position and behavior on article page
+  - adjust container behaviour globally
+
 2015/08/11 0.0.16
 =================
 
   - improved icon, linking and behavior of nav
   - fixed dossier page
 
-  - rename all mediaqueries so that they make sense
-  - use ems for mediaqueries to make the layout zoomable
-  - adjust advertising position and behavior on article page
-  - adjust container behaviour globally
 
 2015/08/10 0.0.15
 =================
