--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ unreleased
 
   - DossierHeader: lowercase before uniq to ensure duplicate tags are caught
   - ImageGallery: revert to basic image enrichment if gallery only contains one image
+  - EnrichmentSnippet - these don't need captions unless there's a source
+  - Caption - improve styling and display logic
 
 2015/08/12 0.0.19
 =================
