--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - added a wrapper for async rendering to have a better exception experience
+
 2015/08/13 0.0.22
 =================
 
