--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - detect "publireportage" on main- and sub-ressort
+
 2015/08/14 0.0.25
 =================
 
