Changes: adding changes to RessortTeaser

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ unreleased
 
 - fix API tests by extending Request mock object
 - implement sticky skyscraper advertising
+- Icon: enable parent components to style SVG
+- RessortTeaser: CTA now uses an SVG icon instead of incorrect ASCII arrow
 
 2015/08/18 0.0.28
 =================
