Changes: adding HTML snippet fixes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ unreleased
 - implement sticky skyscraper advertising
 - Icon: enable parent components to style SVG
 - RessortTeaser: CTA now uses an SVG icon instead of incorrect ASCII arrow
+- make Youtube and Vimeo HTML snippets responsive
+- style HTML snippet captions
 
 2015/08/18 0.0.28
 =================
