--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+- changed the way how environment settings are loaded
 - fixed 'replace' exception
 - bug fixes and improves sticky skyscraper
 - improve layout and config of advertising
