--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,11 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+2015/08/25 0.0.30
+=================
+
+- provide kaltura ids in "az.globals" for client use
+
 2015/08/24 0.0.29
 =================
 
