RessortTeaser: moving container to root tag

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changes for az-nwch-js
 unreleased
 ==========
 - fixed microdata markup for articles and article teasers
+- RessortTeaser: moving location of container in styleguide markup
 
 2015/08/25 0.0.31
 =================
