Video: re-write video init to use az.globals

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ unreleased
 ==========
 - fixed microdata markup for articles and article teasers
 - RessortTeaser: moving location of container in styleguide markup
+- Video: use az.globals for Kaltura ID so videos work on all skins
 
 2015/08/25 0.0.31
 =================
