--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ unreleased
 - adds missing video microdata
 - adds microdata meta tags where visible content is not available
 - simplifies image microdata
+- updating regex for HTML snippet captions
 
 2015/08/25 0.0.33
 =================
