--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changes for az-nwch-js
 
 unreleased
 ==========
+
+- added bugmuncher script to the __body_bottom include
+  DEPLOY:
+   set BUG_MUNCHER=true in .env.deploy for staging
 - fixes HeaderNav behaviour on pages with advertising
 - implements a simpler IE9 fix for HeaderNav
 
