--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+- removes copyright symbol from article byline
+
 2015/08/28 0.0.35
 =================
 
