--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+- getScript helper is now Promise-based. Instead of passing a callback it returns a Promise object
+
 2015/09/01 0.0.37
 =================
 
