--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ unreleased
 - DossierHeader: fixes image size/ratio
 - Article: fix stoerer position and article alignment
 - tweaks large teaser variation on small screen sizes
+- Teaser: adds basic-listed variation and data-switching between viewports
+- Teaser: improves spacing on overview pages
 
 2015/09/01 0.0.41
 =================
