--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+- trimmed title of video teaser
 - added displaying of source in video library
 
 2015/09/29 0.0.45
