--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+- change nav-item "Panorama" to "Leben/Wissen"
+
 2015/10/07 0.0.51
 =================
 
