--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - added tests for expander
  - fix legacy teaser and image handling
  - change nav-item "Panorama" to "Leben/Wissen"
 
