--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,11 @@ unreleased
 2015/10/19 0.0.55
 =================
 
+ - CategoryOverview: new component for displaying an overview of a labeltype i.e. Meinung teasers
+   DEPLOY: add HTML to CMS layout with tal includes for this news manager
+ - Teaser: new 'author' variation added for use in the above
+ - Teaser: auto-switches basic, meining Teasers -> quote teaser
+ - ArticleHeader: add Avatar for Meinung articles, with fallback
  - ArticleHeader: add UGC and Sponsored content header
  - Ads: fix / improve all advertising slot spacing and Skyscraper behaviour
    DEPLOY: update id="sticky-wrapper" positions in CMS layouts
