--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ Changes for az-nwch-js
 unreleased
 ==========
 
+ - New icons: Crest and Help
+ - Visuals and functionality for /dashboard
+
 2015/10/19 0.0.55
 =================
 
